# sector-filter-ego-planner

./: .gitignore  README.md
benchmark/: batch_20_goal_benchmark.sh  safe_manual_goal_benchmark.sh
ego_planner_modifications/: sector_filter.patch
ego_planner_modifications/modified_files/: advanced_param.launch.py  ego_replan_fsm.cpp  ego_replan_fsm.h  grid_map.cpp  grid_map.h  single_run_in_sim.launch.py
pipeline/: launch_drone0.sh  launch_drone0_README.md  spawn_pillars.py
sector_filter_node/: CMakeLists.txt  package.xml
sector_filter_node/src/: sector_filter_node.cpp
